examples/type_system/failing/140_recursive_self_reference_return_precision.flx
fn countdown(n) {
    if n == 0 {
        0
    } else {
        countdown(n - 1)
    }
}

fn main() -> Unit {
    let value: String = countdown(2)
}
